# s1_to_ndvi

./: .dockerignore  .gitignore  Dockerfile  README.md  config.py  lets.py  new.xml  preprocessing.xml  pyproject.toml
app/: __main__.py  new.py  old.py  preprocessing.py
app/templates/: form.html
provision/commands/: docker_build.sh  docker_run.sh
provision/containers/infra/: flower.yaml
provision/deploy_switches/: infra.yaml  service.yaml
provision/envs/development/: hosts.yaml
provision/envs/production/: hosts.yaml
provision/roles/lgblkb/files/poetry_cache/: pyproject.toml
provision/roles/lgblkb/tasks/: pull_project.yaml  run_container.yaml
provision/settings/: infra.yaml  service.yaml
